# stochast

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
stochast/: __init__.py  _registry.py  cli.py
stochast/_core/: __init__.py  exceptions.py  types.py
stochast/assertions/: __init__.py  behavioral.py  combinators.py  exact.py  judge.py  protocol.py  schema.py  semantic.py
stochast/providers/: __init__.py  litellm.py  protocol.py
stochast/reporters/: __init__.py  _utils.py  json_reporter.py  junit.py  terminal.py
stochast/runner/: __init__.py  stat_runner.py
tests/: test_core.py  test_smoke_cli.py
