[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stochast"
version = "0.1.0"
description = "Statistical testing framework for non-deterministic AI systems"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["llm", "testing", "ai", "evaluation", "non-deterministic"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "pydantic>=2.0",
    "litellm>=1.0",
]

[project.optional-dependencies]
semantic = ["sentence-transformers>=3.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anyio>=4.0",
]

[project.scripts]
stochast = "stochast.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
